--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "apexcharts": "^5.3.2",
-        "vue3-apexcharts": "^1.8.0"
+        "vue3-apexcharts": "^1.8.0",
+        "vue3-toastify": "^0.2.8"
     }
 }
