--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "@vueform/multiselect": "^2.6.11",
         "apexcharts": "^5.3.2",
         "vue3-apexcharts": "^1.8.0",
         "vue3-toastify": "^0.2.8"
