--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
         "@primeuix/themes": "^1.2.3",
         "@vueform/multiselect": "^2.6.11",
         "apexcharts": "^5.3.2",
+        "cropperjs": "^1.6.2",
         "primevue": "^4.3.7",
+        "vue-cropperjs": "^5.0.0",
         "vue3-apexcharts": "^1.8.0",
         "vue3-toastify": "^0.2.8"
     }
