--- a/package.json
+++ b/package.json
@@ -25,9 +25,13 @@
         "@vueform/multiselect": "^2.6.11",
         "apexcharts": "^5.3.2",
         "cropperjs": "^1.6.2",
+        "jspdf": "^3.0.2",
+        "jspdf-autotable": "^5.0.2",
         "primevue": "^4.3.7",
         "vue-cropperjs": "^5.0.0",
         "vue3-apexcharts": "^1.8.0",
-        "vue3-toastify": "^0.2.8"
+        "vue3-tel-input": "^1.0.4",
+        "vue3-toastify": "^0.2.8",
+        "xlsx": "^0.18.5"
     }
 }
