--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@primeuix/themes": "^1.2.3",
         "@vueform/multiselect": "^2.6.11",
         "apexcharts": "^5.3.2",
+        "bootstrap-icons": "^1.13.1",
         "cropperjs": "^1.6.2",
         "intl-tel-input": "^25.8.5",
         "jspdf": "^3.0.2",
@@ -34,6 +35,7 @@
         "vue3-apexcharts": "^1.8.0",
         "vue3-tel-input": "^1.0.4",
         "vue3-toastify": "^0.2.8",
-        "xlsx": "^0.18.5"
+        "xlsx": "^0.18.5",
+        "lucide-vue-next": "^0.525.0"
     }
 }
