--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@primeuix/themes": "^1.2.3",
         "@vueform/multiselect": "^2.6.11",
         "apexcharts": "^5.3.2",
+        "bootstrap-icons": "^1.13.1",
         "cropperjs": "^1.6.2",
         "intl-tel-input": "^25.8.5",
         "jspdf": "^3.0.2",
