--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.2",
         "laravel/tinker": "^2.10.1",
+        "mike42/escpos-php": "^4.0",
         "spatie/laravel-permission": "^6.21",
         "stevebauman/location": "^7.6",
         "tightenco/ziggy": "^2.0"
