--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "mike42/escpos-php": "^4.0",
         "spatie/laravel-permission": "^6.21",
         "stevebauman/location": "^7.6",
+        "stripe/stripe-php": "^17.6",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
