--- a/package.json
+++ b/package.json
@@ -23,19 +23,20 @@
     "dependencies": {
         "@primeuix/themes": "^1.2.3",
         "@vueform/multiselect": "^2.6.11",
+        "@vuepic/vue-datepicker": "^11.0.2",
         "apexcharts": "^5.3.2",
         "bootstrap-icons": "^1.13.1",
         "cropperjs": "^1.6.2",
         "intl-tel-input": "^25.8.5",
         "jspdf": "^3.0.2",
         "jspdf-autotable": "^5.0.2",
+        "lucide-vue-next": "^0.525.0",
         "primevue": "^4.3.7",
         "vue-cropperjs": "^5.0.0",
         "vue-tel-input": "^9.5.0",
         "vue3-apexcharts": "^1.8.0",
         "vue3-tel-input": "^1.0.4",
         "vue3-toastify": "^0.2.8",
-        "xlsx": "^0.18.5",
-        "lucide-vue-next": "^0.525.0"
+        "xlsx": "^0.18.5"
     }
 }
