--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
         "@vueform/multiselect": "^2.6.11",
         "@vuepic/vue-datepicker": "^11.0.2",
         "apexcharts": "^5.3.2",
+        "bootstrap": "^5.3.8",
         "bootstrap-icons": "^1.13.1",
         "cropperjs": "^1.6.2",
+        "feather-icons": "^4.29.2",
         "intl-tel-input": "^25.8.5",
         "jspdf": "^3.0.2",
         "jspdf-autotable": "^5.0.2",
