--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@primeuix/themes": "^1.2.3",
         "@vueform/multiselect": "^2.6.11",
         "@vuepic/vue-datepicker": "^11.0.2",
+        "@vueuse/core": "^13.9.0",
         "apexcharts": "^5.3.2",
         "bootstrap": "^5.3.8",
         "bootstrap-icons": "^1.13.1",
