--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "intl-tel-input": "^25.8.5",
         "jspdf": "^3.0.2",
         "jspdf-autotable": "^5.0.2",
+        "libphonenumber-js": "^1.12.23",
         "lucide-vue-next": "^0.525.0",
         "primevue": "^4.3.7",
         "vue-cropperjs": "^5.0.0",
