--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "jspdf-autotable": "^5.0.2",
         "libphonenumber-js": "^1.12.23",
         "lucide-vue-next": "^0.525.0",
+        "pinia": "^3.0.3",
         "primevue": "^4.3.7",
         "vue-cropperjs": "^5.0.0",
         "vue-tel-input": "^9.5.0",
