--- a/.cpenal.yml
+++ b/.cpenal.yml
@@ -31,3 +31,6 @@ deployment:
 
     # ---- Optimize caches ----
     - $PHP artisan optimize
+
+    - cd $APP_PATH
+    - $PHP artisan storage:link || true
