--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,44 +1,60 @@
 ---
 deployment:
   tasks:
-    # ---- 1. Define paths ----
-    - export APP_PATH="$HOME/tenxglobal"                 # Laravel project root
-    - export PUBLIC_HTML="$HOME/public_html"             # Your live domain root
-    - export PHP="/opt/cpanel/ea-php82/root/usr/bin/php" # Adjust if your PHP version differs
+    # ---------- 1) Paths (edit if needed) ----------
+    - export APP_PATH="$HOME/tenxglobal"                 # Laravel project root (artisan lives here)
+    - export PUBLIC_HTML="$HOME/public_html"             # Your live web root
+    - export PHP="/opt/cpanel/ea-php82/root/usr/bin/php" # Adjust if your server uses a different PHP
 
-    # ---- 2. Sync Git repo to APP_PATH (outside web root) ----
-    - mkdir -p $APP_PATH
-    - /bin/rsync -a --delete --exclude=".git" --exclude="node_modules" $DEPLOYPATH/ $APP_PATH/
+    # ---------- 2) Sync repo to APP_PATH (outside web root) ----------
+    - mkdir -p "$APP_PATH"
+    - /bin/rsync -a --delete --exclude=".git" --exclude="node_modules" "$DEPLOYPATH/" "$APP_PATH/"
 
-    # ---- 3. Composer install (production mode) ----
-    - cd $APP_PATH
+    # ---------- 3) Composer (production) ----------
+    - cd "$APP_PATH"
     - if command -v composer >/dev/null 2>&1; then
         composer install --no-dev --optimize-autoloader;
       else
-        echo "Composer not found — skipped";
+        echo "Composer not found — skipping composer install";
       fi
 
-    # ---- 4. Build Vite assets (if Node.js available) ----
+    # ---------- 4) Vite build (only if Node is available) ----------
     - if command -v npm >/dev/null 2>&1; then
         rm -rf public/build;
         npm ci;
         npm run build;
       else
-        echo "Node not available — skipping npm build";
+        echo "Node not found — skipping asset build (ensure public/build is committed if needed)";
       fi
 
-    # ---- 5. Publish ONLY public folder to public_html ----
-    - /bin/rsync -a --delete $APP_PATH/public/ $PUBLIC_HTML/
+    # ---------- 5) Publish ONLY public/ to public_html ----------
+    - /bin/rsync -a --delete "$APP_PATH/public/" "$PUBLIC_HTML/"
 
-    # ---- 6. Create correct storage symlink ----
-    - rm -f $PUBLIC_HTML/storage
-    - ln -s $APP_PATH/storage/app/public $PUBLIC_HTML/storage
+    # ---------- 6) COPY storage files instead of using a symlink (fixes 403) ----------
+    - rm -rf "$PUBLIC_HTML/storage"
+    - mkdir -p "$PUBLIC_HTML/storage"
+    - /bin/rsync -a "$APP_PATH/storage/app/public/" "$PUBLIC_HTML/storage/"
 
-    # ---- 7. Laravel optimize commands ----
-    #- $PHP artisan migrate --force || true
-    - $PHP artisan storage:link || true
-    - $PHP artisan optimize:clear
-    - $PHP artisan optimize
+    # Make sure storage files are readable
+    - find "$PUBLIC_HTML/storage" -type d -exec chmod 755 {} \;
+    - find "$PUBLIC_HTML/storage" -type f -exec chmod 644 {} \;
 
-    # ---- 8. Done ----
-    - echo "✅ Deployment completed successfully!"
+    # ---------- 7) Optimize caches (heavy clear only if .env changed) ----------
+    - export ENV_MD5_FILE="$APP_PATH/storage/framework/.env.md5"
+    - export CURRENT_ENV_MD5="$(/usr/bin/md5sum "$APP_PATH/.env" 2>/dev/null | awk '{print $1}')"
+    - export SAVED_ENV_MD5="$(cat "$ENV_MD5_FILE" 2>/dev/null || echo '')"
+    - if [ "$CURRENT_ENV_MD5" != "$SAVED_ENV_MD5" ]; then
+        echo ".env changed → optimize:clear + optimize";
+        $PHP artisan optimize:clear || true;
+        $PHP artisan optimize || true;
+        echo "$CURRENT_ENV_MD5" > "$ENV_MD5_FILE";
+      else
+        echo ".env unchanged → light optimize";
+        $PHP artisan optimize || true;
+      fi
+
+    # ---------- 8) (Optional) Migrate database ----------
+    # - $PHP artisan migrate --force || true
+
+    # ---------- 9) Done ----------
+    - echo "✅ Deployment completed successfully"
