--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
         "autoprefixer": "^10.4.12",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
+        "laravel-echo": "^2.2.4",
         "laravel-vite-plugin": "^2.0.0",
         "postcss": "^8.4.31",
+        "pusher-js": "^8.4.0",
         "tailwindcss": "^3.2.1",
         "vite": "^7.0.6",
         "vue": "^3.4.0"
@@ -34,6 +36,7 @@
         "jspdf": "^3.0.2",
         "jspdf-autotable": "^5.0.2",
         "libphonenumber-js": "^1.12.23",
+        "lodash": "^4.17.21",
         "lucide-vue-next": "^0.525.0",
         "pinia": "^3.0.3",
         "primevue": "^4.3.7",
